# twilight-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: FlowLayout.cpp  FlowLayout.h  HostList.cpp  HostList.h  HubWindow.cpp  HubWindow.h  HubWindow.ui  HubWindowAddHostDialog.ui  HubWindowHostItem.cpp  HubWindowHostItem.h  HubWindowHostItem.ui  IDecoder.h  NetworkClock.cpp  NetworkClock.h  StreamClient.cpp  StreamClient.h  StreamViewer.cpp  StreamViewer.h  StreamViewerBase.cpp  StreamViewerBase.h  StreamWindow.cpp  StreamWindow.h
src/client/platform/software/: DecoderFFmpeg.cpp  DecoderFFmpeg.h  DecoderOpenH264.cpp  DecoderOpenH264.h  DecoderSoftware.cpp  DecoderSoftware.h  IDecoderSoftware.h
src/client/platform/windows/: D3DTextureUploader.cpp  D3DTextureUploader.h  DecodePipelineSoftD3D.cpp  DecodePipelineSoftD3D.h  RendererD3D.cpp  RendererD3D.h  StreamViewerD3D.cpp  StreamViewerD3D.h  main.cpp  viewer.hlsl
src/common/: ByteBuffer.h  CertHash.cpp  CertHash.h  CertStore.cpp  CertStore.h  CircularDeque.h  DesktopFrame.h  Keypair.cpp  Keypair.h  NetworkInputStream.cpp  NetworkInputStream.h  NetworkOutputStream.cpp  NetworkOutputStream.h  NetworkServer.cpp  NetworkServer.h  NetworkSocket.cpp  NetworkSocket.h  Rational.cpp  Rational.h  RingBuffer.h  StatisticMixer.cpp  StatisticMixer.h  ffmpeg-headers.h  log.cpp  log.h  packet.proto  packets.proto  stream.proto  util.cpp  util.h  version.cpp.in  version.h
src/common/net/: NetworkInputStream.cpp  NetworkInputStream.h  NetworkOutputStream.cpp  NetworkOutputStream.h  NetworkServer.cpp  NetworkServer.h  NetworkSocket.cpp  NetworkSocket.h
src/common/platform/software/: OpenH264Loader.cpp  OpenH264Loader.h  ScaleSoftware.cpp  ScaleSoftware.h  TextureAllocArena.cpp  TextureAllocArena.h  TextureSoftware.cpp  TextureSoftware.h
src/common/platform/windows/: ComWrapper.h  DeviceManagerD3D.cpp  DeviceManagerD3D.h  DxgiHelper.cpp  DxgiHelper.h  OpenH264LoaderWin32.cpp  OpenH264LoaderWin32.h  QPCTimer.cpp  QPCTimer.h  winheaders.h
src/common/protobuf/: auth.proto  control.proto  packet.proto  stream.proto
src/server/: AudioEncoder.cpp  AudioEncoder.h  CaptureData.h  CapturePipeline.cpp  CapturePipeline.h  CapturePipelineFactory.cpp  CapturePipelineFactory.h  Connection.cpp  Connection.h  KnownClients.cpp  KnownClients.h  LocalClock.cpp  LocalClock.h  StreamServer.cpp  StreamServer.h
src/server/platform/software/: EncoderFFmpeg.cpp  EncoderFFmpeg.h  EncoderOpenH264.cpp  EncoderOpenH264.h  EncoderSoftware.cpp  EncoderSoftware.h  ScaleSoftware.cpp  ScaleSoftware.h  TextureSoftware.cpp  TextureSoftware.h
src/server/platform/windows/: AudioCaptureWASAPI.cpp  AudioCaptureWASAPI.h  CaptureD3D.cpp  CaptureD3D.h  CaptureManagerD3D.cpp  CaptureManagerD3D.h  CapturePipelineD3D.cpp  CapturePipelineD3D.h  CapturePipelineD3DMF.cpp  CapturePipelineD3DMF.h  CapturePipelineD3DSoft.cpp  CapturePipelineD3DSoft.h  CapturePipelineFactroryWin32.cpp  CapturePipelineFactroryWin32.h  CaptureWin32.h  ColorConvD3D.cpp  ColorConvD3D.h  DeviceManagerD3D.cpp  DeviceManagerD3D.h  EncoderBase.h  EncoderD3D.cpp  EncoderD3D.h  EncoderMF.cpp  EncoderMF.h  EncoderSoftware.cpp  EncoderSoftware.h  MediaFoundationEncoder.h  ScaleD3D.cpp  ScaleD3D.h  StreamManager.cpp  StreamManager.h  main.cpp  rgb2yuv.hlsl
tools/: fix-header-guard.py
